src/objects/Direcciones_B2B_B2B2C_Lineas_de_Contrato__c.object
<CustomObject>
    <fields>
        <fullName>DLC_DAT_Activacion_primer_servicio__c</fullName>
        <label>Activación primer servicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DLC_FOR_Direccion__c</fullName>
        <formula>DLC_LKP_Direccion_B2B_B2B2C__r.ShippingStreet &amp; &quot;,&quot; &amp;  DLC_LKP_Direccion_B2B_B2B2C__r.ShippingPostalCode &amp; &quot; &quot; &amp;  DLC_LKP_Direccion_B2B_B2B2C__r.ShippingCity  &amp; &quot; &quot; &amp;  DLC_LKP_Direccion_B2B_B2B2C__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLC_FOR_LC_RTDevName__c</fullName>
        <description>Nombre API del Tipo de Registro de la Línea de Contrato.</description>
        <formula>&apos;Linea_Contrato__c:&apos; + DLC_LKP_Linea_de_Contrato__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LC RecordType DevName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLC_FOR_Linea_Contrato_Activa__c</fullName>
        <description>Indica si la Línea de Contrato asociada está Activa.</description>
        <formula>DLC_LKP_Linea_de_Contrato__r.LDC_CAS_Activo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Línea de Contrato Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DLC_FOR_Linea_Contrato_LimServ__c</fullName>
        <description>Saldo total de servicios definido en la Línea de Contrato.</description>
        <formula>DLC_LKP_Linea_de_Contrato__r.LDC_NUM_Limite_de_servicios__c</formula>
        <label>Línea de Contrato: Límite Servicios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DLC_FOR_Nombre_de_Cuenta__c</fullName>
        <formula>DLC_LKP_Direccion_B2B_B2B2C__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de la Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLC_FOR_Tipo__c</fullName>
        <formula>DLC_LKP_Linea_de_Contrato__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLC_LKP_Direccion_B2B_B2B2C__c</fullName>
        <label>Dirección B2B/B2B2C</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Cliente B2B/B2B2C secundario</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Líneas de Contrato</relationshipLabel>
        <relationshipName>Direcciones_B2B_B2B2C_L_neas_de_Contrato</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DLC_LKP_Linea_de_Contrato__c</fullName>
        <label>Línea de Contrato</label>
        <referenceTo>Linea_Contrato__c</referenceTo>
        <relationshipLabel>Direcciones/Clientes Finales</relationshipLabel>
        <relationshipName>Direcciones_B2B_B2B2C_L_neas_de_Contrato</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DLC_NUM_Servicios_restantes__c</fullName>
        <label>Servicios restantes</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DLC_TXT_Identificador__c</fullName>
        <description>Concatenación de los IDs de la Cuenta y de la Línea de Contrato.</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dirección B2B/B2B2C-Línea de Contrato</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones B2B/B2B2C-Líneas de Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(DLC_TXT_Identificador__c))),ISCHANGED(DLC_TXT_Identificador__c)), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK( DLC_TXT_Identificador__c),ISNULL( DLC_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>DLC_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>